--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #efefef;
+    background-color: rosybrown;
+    color: white;
     padding: 20px;
     border-radius: 16px;
     gap: 20px;
@@ -39,13 +40,10 @@
     padding: 12px 24px;
     font-size: 16px;
     border: none;
-    background-color: rgb(0, 71, 158);
+    background-color: rgb(235, 81, 114);
     color: white;
     cursor: pointer;
     border-radius: 6px;
   }
-  
-  button:disabled {
-    background-color: rgb(0, 71, 158, 0.5);
-  }
+
   
